[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "emiproc"
description = "Emission Processing Tool"
authors = [
    {name = "Michael Jähn"},
    {name = "Gerrit Kuhlmann"},
    {name = "Q. Mu"},
    {name = "J.M. Haussaire"},
    {name = "David Ochsner"},
    {name = "K. Osterried"},
    {name = "V. Clément"},
    {name = "Joel Thanwerdas"},
    {name = "Corina Keller"},
    {name = "Lionel Constantin", email="lionel.constantin@empa.ch"},
    {name = "Dominik Brunner", email="dominik.brunner@empa.ch"},
]
dependencies = [
    "geos",
    "numpy",
    "pandas",
    "geopandas",
    "netCDF4",
    "scipy",
    "shapely",
    "xarray>=2023.10",
    "rasterio",
    "pyogrio",
    "pyyaml",
    "fiona",
]
license = {text = "BSD-3-Clause"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["emission", "processing", "inventory", "cosmo", "icon-art"]
classifiers = [
    "Programming Language :: Python :: 3",
]


dynamic = ["version"]

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.setuptools.packages.find]
include = ["emiproc"]  # package names should match these glob patterns (["*"] by default)



[project.optional-dependencies]
doc = [
    "sphinx",
    "furo",
    "enum-tools",
    "sphinx_toolbox",
    "nbsphinx",
]
dev = ["black"]
